[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=3]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="nav" type="Navigation2D" parent="."]

[node name="map" type="TileMap" parent="nav"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 10, 0, 2, 13, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 2, 0, 65536, 1, 0, 65537, 1, 0, 65538, 6, 0, 65539, 12, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 13, 0, 65545, 7, 0, 65546, 2, 0, 131072, 5, 0, 131073, 1, 0, 131074, 6, 0, 131075, 8, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 9, 0, 131081, 13, 0, 131082, 2, 0, 196608, 8, 0, 196609, 1, 0, 196610, 6, 0, 196611, 8, 0, 196612, 1, 0, 196613, 3, 0, 196614, 5, 0, 196615, 1, 0, 196616, 1, 0, 196617, 6, 0, 196618, 2, 0, 262144, 8, 0, 262145, 1, 0, 262146, 9, 0, 262147, 11, 0, 262148, 1, 0, 262149, 6, 0, 262150, 14, 0, 262151, 5, 0, 262152, 1, 0, 262153, 6, 0, 262154, 2, 0, 327680, 8, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 6, 0, 327686, 7, 0, 327687, 8, 0, 327688, 1, 0, 327689, 6, 0, 327690, 2, 0, 393216, 14, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 15, 0, 393222, 7, 0, 393223, 8, 0, 393224, 1, 0, 393225, 6, 0, 393226, 2, 0 )

[node name="start_pos" type="Position2D" parent="."]
position = Vector2( 0, 192 )

[node name="end_pos" type="Position2D" parent="."]
position = Vector2( 1088, 896 )

[node name="target_timer" type="Timer" parent="."]
autostart = true

[node name="GUI" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="target_timer" to="." method="_on_target_timer_timeout"]
